# OpenWorld

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: README.md
examples/: README.md  battery_simulation.py  physics_basic.py  solar_cell_basic.py  worldmodel_reasoning.py
examples/notebooks/: README.md
examples/scripts/: README.md  battery_simulation_example.py  solar_cell_example.py
openworld/: __init__.py  __main__.py  config.py
openworld/agent/: __init__.py  world_model_agent.py
openworld/agent/reasoning/: causal_engine.py
openworld/api/: __init__.py  python_api.py  schemas.py
openworld/cli/: __init__.py  main.py
openworld/core/: __init__.py  master_models.py  simulation_manager.py
openworld/core/base/: __init__.py  physical_object.py  physics_world.py
openworld/core/battery/: __init__.py  parameters.py  simulation.py
openworld/core/physics/: __init__.py  broadphase.py  collision.py  contact.py  particle.py  world.py
openworld/core/solar/: __init__.py  device.py  material.py  simulation.py
openworld/utils/: __init__.py  exceptions.py  logging.py  units.py
src/openworld/: __init__.py  config.py
src/openworld/agent/: __init__.py  core.py
src/openworld/agent/core/: __init__.py
src/openworld/agent/memory/: __init__.py  state_memory.py
src/openworld/agent/reasoning/: __init__.py  engine.py
src/openworld/agent/tools/: __init__.py  simulation_tool.py
src/openworld/api/: __init__.py  client.py  schemas.py  server.py
src/openworld/cli/: __init__.py  main.py
src/openworld/core/: __init__.py
src/openworld/core/ai/: __init__.py  long_context.py
src/openworld/core/battery/: __init__.py  mechanical_stress.py
src/openworld/core/physics/: __init__.py  engine.py
src/openworld/core/solar/: __init__.py
src/openworld/solvers/: __init__.py
src/openworld/utils/: __init__.py  logging_config.py  units.py
src/openworld/visualization/: __init__.py  plotting.py
src/openworld/visualization/dashboard/: __init__.py
tests/: README.md  test_basic.py
tests/integration/: README.md  __init__.py
tests/unit/: README.md  __init__.py  test_physics.py
tests/validation/: README.md  __init__.py
